# mypkg

./: README.md  package.xml  setup.py
config/: test_controllers.yaml
launch/: test.launch.py
models/my_ground_plane/: model.config  model.sdf
models/my_ground_plane/materials/scripts/: my_ground_plane.material
mypkg/: follower.py
rviz/: rviz_config.rviz
urdf/: myrobot.urdf  test.xacro.urdf
worlds/: empty_world.world  myworld.world
